--- a/styles/style.css
+++ b/styles/style.css
@@ -333,3 +333,125 @@ font-weight: 700;
     text-decoration: none; 
     color: white;
 }
+
+/* donet-section styles */
+
+.donet-section{
+    margin-top: 50px;
+}
+.donet-section h1{
+    font-size: 50px;
+    font-weight: 700; 
+    text-align: center;
+    margin-top: 20px;
+}
+.donet-section p{
+    font-size: 20px;
+    font-weight:200; 
+    text-align: center;
+    margin-top: 10px;
+}
+.donet-parent{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+
+}
+.donet-child{
+    width: 240px;
+    height: 128px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+   display: flex;
+   align-items: center;
+   text-align: center;
+   justify-content: center;
+}
+
+.different-donet-child{
+    width: 240px;
+    height: 128px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background:rgb(198, 228, 214);
+   display: flex;
+   align-items: center;
+   text-align: center;
+   justify-content: center;
+}
+
+.iput{
+  justify-content: center;
+  margin-top: 30px;
+  
+  
+}
+.text{
+    width: 1032px;
+    height: 64px;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 10px;
+   border: 2px solid gray;
+   margin-top: 10px;
+}
+
+.button-div{
+    width: fit-content;
+    margin: auto;
+    margin-top: 10px;
+    
+}
+.button{
+    width: 151px;
+    height: 56px; 
+    background-color:rgb(0, 106, 80) ; 
+    border: 1px solid rgba(14, 14, 14, 0.1);
+    border-radius: 8px;
+    text-decoration: none;
+}
+.button a{
+    text-decoration: none;
+    color: white;  
+}
+
+/* subcribe-section styles */
+.subribe-section{
+    width: 1280px;
+   height: 395px;
+    background-color:rgb(198, 228, 214) ;
+    align-items: center;
+}
+.subribe-section h1{
+    font-size: 45px;
+    font-weight: 750;
+    text-align: center;
+    
+}
+.subribe-section p{
+    text-align:center;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top:15px
+}
+
+.email-div{
+    width:fit-content;
+    margin: auto;
+    margin-top:20px;
+
+}
+.email{
+    width: 600px;
+   height: 55px;
+}
+.sub-button{
+    width: 150px;
+   height: 56px;
+   margin-right:20px;
+}
+
+.sub-text{
+    margin-right:20px; 
+}
