--- a/styles/style.css
+++ b/styles/style.css
@@ -418,11 +418,21 @@ font-weight: 700;
 
 /* subcribe-section styles */
 .subribe-section{
+  display: flex;
+  justify-content: center; 
+}
+
+.sub-parent{
+    margin-top:50px ;
     width: 1280px;
    height: 395px;
     background-color:rgb(198, 228, 214) ;
     align-items: center;
+    display: flex;
+    justify-content: center;
+    border-radius: 15px;
 }
+
 .subribe-section h1{
     font-size: 45px;
     font-weight: 750;
@@ -433,25 +443,39 @@ font-weight: 700;
     text-align:center;
     font-size: 20px;
     font-weight: 500;
-    margin-top:15px
+    margin-top:15px;
 }
 
-.email-div{
-    width:fit-content;
-    margin: auto;
-    margin-top:20px;
-
-}
-.email{
+.input-f{
     width: 600px;
-   height: 55px;
+    height: 55px;
+    margin-top: 30px;
+    border-radius: 10px 0 0 10px;
+    text-align: center;
+    font-size: 20px;
 }
-.sub-button{
+.button-f{
     width: 150px;
-   height: 56px;
-   margin-right:20px;
+  height: 56px;
+   margin-top: 30px; 
+   border-radius: 0 10px  10px 0 ;
+   background-color: rgb(0, 106, 80);
+   color: aliceblue;
+
 }
 
-.sub-text{
-    margin-right:20px; 
+.footer{
+    background-color: beige;
+    margin: 40px;padding: 40px;
+    
+}
+footer h1{
+    text-align: center;
+    margin-bottom: 15px;
+}
+.footer-icon{
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    margin-top: 50px;
 }
