--- a/styles/style.css
+++ b/styles/style.css
@@ -445,22 +445,34 @@ font-weight: 700;
     font-weight: 500;
     margin-top:15px;
 }
+.sub-input{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+   justify-content: center;
+}
 
 .input-f{
     width: 600px;
-    height: 55px;
-    margin-top: 30px;
+    height: 54px;
     border-radius: 10px 0 0 10px;
     text-align: center;
     font-size: 20px;
+    margin:0px;
+
+    border: none;
 }
 .button-f{
-    width: 150px;
+    
+    border: none;
+    width: 170px;
   height: 56px;
-   margin-top: 30px; 
    border-radius: 0 10px  10px 0 ;
    background-color: rgb(0, 106, 80);
    color: aliceblue;
+   margin: 0px;
+   
+   padding-left: 10px;
 
 }
 
