--- a/styles/style.css
+++ b/styles/style.css
@@ -273,7 +273,7 @@ font-weight: 700;
        align-items: center;
    }
    .openion-parent{
-       background-color: rgb(114, 237, 237);
+       background-color: rgb(255, 255, 255) ;
        width: 1280px;
        height: 409px;
        border-radius: 20px;
@@ -295,13 +295,13 @@ font-weight: 700;
    .select{
        width: 160px;
       height:50px;
-      background-color: burlywood;
+      background-color:rgb(198, 228, 214);
       border-radius: 5px;
       text-align: center;
    }
    
    .tr-th{
-       background-color:burlywood ;
+       background-color:rgb(198, 228, 214);
    }
 
 /* recent news styles */
@@ -323,7 +323,7 @@ font-weight: 700;
     display: flex;
     align-items: center;
     border-radius: 24px;
-    background-color: rgba(210, 204, 204, 0.849);
+    background-color:rgb(255, 255, 255);
     gap: 30px;
     padding: 20px;
 }
@@ -367,7 +367,7 @@ font-weight: 700;
     display: flex;
     align-items: center;
     border-radius: 24px;
-    background-color: rgba(210, 204, 204, 0.849);
+    background-color: rgb(255, 255, 255);
     gap: 30px;
     padding: 20px;
 }
@@ -564,8 +564,9 @@ font-weight: 700;
 }
 
 .footer{
-    background-color: beige;
-    margin: 40px;padding: 40px;
+    background-color:white;
+    margin: 40px;
+    padding: 40px;
     
 }
 footer h1{
@@ -580,4 +581,6 @@ footer h1{
 }
 
 
-
+body{
+    background-color: rgb(245, 245, 245);
+}
